--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,5 @@ jobs:
           password: ${{ secrets.SFTP_PASSWORD }}
           protocol: ftps
           port: ${{ secrets.SFTP_PORT }}
-          local-dir: .
+          local-dir: ./
           server-dir: /view-iptv.stream/
