Update deployment workflow to use SFTP instead of FTPS for file uploads

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy via FTPS
+name: Deploy via SFTP
 
 on:
   push:
@@ -11,17 +11,14 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Deploy via FTPS
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+      - name: Upload files via SFTP
+        uses: appleboy/scp-action@master
         with:
-          server: ${{ secrets.SFTP_HOST }}
+          host: ${{ secrets.SFTP_HOST }}
           username: ${{ secrets.SFTP_USERNAME }}
           password: ${{ secrets.SFTP_PASSWORD }}
-          protocol: ftps
-          port: ${{ secrets.SFTP_PORT }}
-          local-dir: ./
-          server-dir: /view-iptv.stream/
-          timeout: 120000
-          log-level: verbose
+          port: 22
+          source: "./"
+          target: "/view-iptv.stream/" # Your remote path
