--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,8 @@ jobs:
           FTP_USER: ${{ secrets.SFTP_USERNAME }}
           FTP_PASS: ${{ secrets.SFTP_PASSWORD }}
         run: |
-          lftp -u $FTP_USER,$FTP_PASS -e "
+          lftp -u $FTP_USER,$FTP_PASS sftp://$FTP_HOST -e "
             set sftp:auto-confirm yes
             mirror -R ./ /view-iptv.stream/
             bye
-          " sftp://$FTP_HOST
+          "
