--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
           node-version: '20'
 
       - name: Install JS deps
-        run: npm install
+        run: npm ci
 
       - name: Run JS tests
         run: npm test
