--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,11 @@ jobs:
         run: |
           lftp -u $FTP_USER,$FTP_PASS sftp://$FTP_HOST -e "
             set sftp:auto-confirm yes
-            mirror -R ./ view-iptv.stream/
+            mirror -R ./ view-iptv.stream/ \
+              --exclude-glob .git* \
+              --exclude-glob .github/* \
+              --exclude-glob "*.test.js" \
+              --exclude-glob "*.spec.js" \
+              --exclude-glob "node_modules/*"
             bye
           "
